fix lg-heading on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -126,4 +126,8 @@
 		flex-direction: column;
 		align-items: stretch;
 	}
+
+	.lg-heading {
+		text-align: center;
+	}
 }
